<resources>
  <string name="app_name">VSP Tracker</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_subtitle">support@vsptracker.app</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="home">Home</string>
  <string name="report_error">Report Error</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="hour_meter_start">Hour Meter Start</string>
  <string name="continuetext">Continue</string>
  <string name="hour_meter_finish">Hour Meter Finish</string>
  <string name="save">Save</string>
  <string name="machine_type">Machine Type</string>
  <string name="machine_number">Machine Number</string>
  <string name="unload">Unload</string>
  <string name="finish">Finish</string>
  <string name="load">Load</string>
  <string name="digging">Digging</string>
  <string name="trenching">Trenching</string>
  <string name="loading">Loading</string>
  <string name="trenching_history">Trenching History</string>
  <string name="loading_history">Loading History</string>
  <string name="general_digging_history">General Digging History</string>
  <string name="start">Start</string>
  <string name="night_mode">Light / Dark Theme</string>
  <string name="day_works">Day Works</string>
  <string name="change_machine">Change Machine</string>
  <string name="end_work">END WORK</string>
  <string name="next">NEXT</string>
  <string name="history">History</string>
  <string name="delay">Waiting</string>
  <string name="back_load">Back Load</string>
  <string name="repeat_journey">Repeat Journey</string>
  <string name="new_journey">New Journey</string>
  <string name="loading_gps">Loading GPS</string>
  <string name="load_number">Load Number</string>
  <string name="loading_machine">Loading Machine</string>
  <string name="activity_day_works_day_work_title_text">Daily Mode</string>
  <string name="activity_day_works_day_works_chronometer_text">Chronometer</string>
  <string name="activity_ehome_ehome_loading_text">Production Digging</string>
  <string name="activity_ehome_ehome_trenching_text">Trenching</string>
  <string name="activity_ehome_ehome_digging_text">General Digging</string>
  <string name="activity_eload_eload_location_text">Location</string>
  <string name="activity_eload_eload_material_text">Material</string>
  <string name="activity_eoff_loading_chronometer1_text">Chronometer</string>
  <string name="activity_eselect_work_eswork_sidecasting_text">Side Casting</string>
  <string name="activity_eselect_work_eswork_off_loading_text">Loading</string>
  <string name="activity_eside_casting_ework_title_text">Trenching</string>
  <string name="activity_eside_casting_chronometer1_text">Chronometer</string>
  <string name="activity_eside_casting_ework_action_text_text">Start</string>
  <string name="activity_history_lh_title_text">Loading History</string>
  <string name="activity_hour_meter_start_ms_reading_text">1</string>
  <string name="activity_hour_meter_stop_sfinish_reading_text">1</string>
  <string name="activity_lmachine1_lm_title_text">Select Loading Machine</string>
  <string name="activity_location1_elocation1_title_text">Select Location</string>
  <string name="activity_login_signin_signup_text">Don\'t have an Account? Sign Up</string>
  <string name="activity_machine_status1_machine_status_title_text">Select Machine Stop Reason</string>
  <string name="activity_machine_status1_machine_stopped_reason_text">Machine Stopped Reason</string>
  <string name="activity_machine_status1_machine_status_start_text">Start Machine</string>
  <string name="activity_material1_ematerial1_title_text">Select Material</string>
  <string name="activity_rload_rload_title_text">Repeat Journey</string>
  <string name="activity_rload_trload_machine_text">Machine</string>
  <string name="activity_rload_trload_material_text">Material</string>
  <string name="activity_rload_trload_location_text">Location</string>
  <string name="activity_rload_trload_weight_text">Weight461</string>
  <string name="activity_rload_trload_load_text">Load</string>
  <string name="activity_runload_trul_task_text">1. Task</string>
  <string name="activity_runload_trul_material_text">2. Material</string>
  <string name="activity_runload_trul_location_text">3. Location</string>
  <string name="activity_runload_trul_weight_text">4. Weight(461)</string>
  <string name="activity_sunload_after_sul_after_new_text">New Journey</string>
  <string name="activity_sunload_after_sul_after_repeat_text">Repeat Journey</string>
  <string name="activity_twait_day_work_title_text">Wait For Load</string>
  <string name="activity_twait_day_works_chronometer_text">Chronometer</string>
  <string name="activity_twait_day_works_action_text_text">Start</string>
  <string name="activity_weight1_sload_weight_hint">Material Weight</string>
  <string name="app_bar_base_toolbar_title_text">VSP Tracker</string>
  <string name="app_bar_base_base_machine_status_text">Machine is Stopped.</string>
  <string name="app_bar_base_base_daily_mode_text">Daily Mode is ON</string>
  <string name="list_row_base_navigation_base_navigation_text_text">Machine</string>
  <string name="list_row_delay_history_eth_record_number_text">:  Trenching</string>
  <string name="list_row_delay_history_eth_machine_type_text">:  Trenching</string>
  <string name="list_row_delay_history_eth_machine_number_text">:  Trenching</string>
  <string name="list_row_delay_history_eth_start_time_text">:  Excavator 1</string>
  <string name="list_row_delay_history_lhr_gps_loading_text">:  Location 1</string>
  <string name="list_row_delay_history_eth_end_time_text">:  Material</string>
  <string name="list_row_delay_history_lhr_gps_unloading_text">:  Location 1</string>
  <string name="list_row_delay_history_eth_duration_text">:  Location 1</string>
  <string name="list_row_delay_history_eth_date_text">:  Weight1</string>
  <string name="list_row_delay_history_eth_mode_text">:  Standard</string>
  <string name="list_row_eloading_elhr_number_text">Load Number </string>
  <string name="list_row_eloading_elhr_material_text">:  1</string>
  <string name="list_row_eloading_elhr_time_text">:  1</string>
  <string name="list_row_eload_history_lhr_record_number_text">:  1</string>
  <string name="list_row_eload_history_lhr_loading_machine_text">:  Excavator 1</string>
  <string name="list_row_eload_history_lhr_loaded_machine_text">:  Truck</string>
  <string name="list_row_eload_history_lhr_loaded_material_text">:  Material</string>
  <string name="list_row_eload_history_lhr_loading_location_text">:  Location 1</string>
  <string name="list_row_eload_history_lhr_gps_loading_text">:  Location 1</string>
  <string name="list_row_eload_history_lhr_loading_weight_text">:  Weight1</string>
  <string name="list_row_eload_history_lhr_time_text">:  Morning 7am - 12am</string>
  <string name="list_row_eload_history_lhr_workmode_text">:  Morning 7am - 12am</string>
  <string name="list_row_eoffloading_elhr_number_text">Load Number </string>
  <string name="list_row_eoffloading_elhr_time_text">:  1</string>
  <string name="list_row_et_history_eth_record_number_text">:  Trenching</string>
  <string name="list_row_et_history_eth_action_text">:  Trenching</string>
  <string name="list_row_et_history_eth_start_time_text">:  Excavator 1</string>
  <string name="list_row_et_history_lhr_gps_loading_text">:  Location 1</string>
  <string name="list_row_et_history_eth_end_time_text">:  Material</string>
  <string name="list_row_et_history_lhr_gps_unloading_text">:  Location 1</string>
  <string name="list_row_et_history_eth_duration_text">:  Location 1</string>
  <string name="list_row_et_history_eth_totalloads_text">:  Location 1</string>
  <string name="list_row_et_history_eth_date_text">:  Weight1</string>
  <string name="list_row_et_history_eth_mode_text">:  Morning 7am - 12am</string>
  <string name="list_row_grid_grid_text_text">Location 1 </string>
  <string name="list_row_loading_history_lhr_trip_number_text">:  1</string>
  <string name="list_row_loading_history_lhr_trip_type_text">:  Back Load</string>
  <string name="list_row_loading_history_lhr_trip0_id_text">:  Back Load</string>
  <string name="list_row_loading_history_lhr_loading_machine_text">:  Excavator 1</string>
  <string name="list_row_loading_history_lhr_loaded_material_text">:  Material</string>
  <string name="list_row_loading_history_lhr_loading_location_text">:  Location 1</string>
  <string name="list_row_loading_history_lhr_gps_loading_text">:  Location 1</string>
  <string name="list_row_loading_history_lhr_gps_unloading_text">:  Location 1</string>
  <string name="list_row_loading_history_lhr_loading_weight_text">:  Weight1</string>
  <string name="list_row_loading_history_lhr_task_text">:  Weight1</string>
  <string name="list_row_loading_history_lhr_time_text">:  Morning 7am - 12am</string>
  <string name="list_row_loading_history_lhr_duration_text">:  Morning 7am - 12am</string>
  <string name="list_row_loading_history_lhr_workmode_text">:  Morning 7am - 12am</string>
  <string name="list_row_machine_status_machine_status_rv_title_text">Machine</string>
  <string name="stop_gps_location">Stop GPS Location</string>
  <string name="end_time">End Time</string>
  <string name="start_gps_location">Start GPS Location</string>
  <string name="start_time">Start Time</string>
  <string name="action">Action</string>
  <string name="id">ID</string>
  <string name="total_loads">Total Loads</string>
  <string name="date">Date</string>
  <string name="mode">Mode</string>
  <string name="gps_location">GPS Location</string>
  <string name="duration">Duration</string>
  <string name="delay_history">Waiting History</string>
  <string name="hour_meter">Hour Meter</string>
  <string name="select_machine">Select Machine</string>
  <string name="machine_location">Machine Location</string>
  <string name="material_weight_tonnes">Material Weight (Tonnes)</string>
  <string name="map">Map</string>
  <string name="work_summary">Work Summary</string>
  <string name="select_material">Select Material</string>
  <string name="trimming">Trimming</string>
  <string name="select_site">Select Site</string>
  <string name="operator">Operator</string>
  <string name="server_sync">Server Sync</string>
  <string name="trip_duration">Trip Duration</string>
  <string name="machine_breakdown">Machine Breakdown</string>
  <string name="stop_machine">Stop Machine</string>
  <string name="work_history">Work History</string>
  <string name="communicate">Communicate</string>
  <string name="start_gps">Start GPS</string>
  <string name="stop_gps">Stop GPS</string>
  <string name="hours_reporting">Hours Reporting</string>
  <string name="data_type">Data Type</string>
  <string name="remaining">Remaining</string>
  <string name="server_synced">Server Synced</string>
  <string name="truck_trips">:  Truck Trips</string>
  <string name="total">Total</string>
  <string name="checkform">Checkform</string>
  <string name="schedule">Schedule</string>
  <string name="questions">Questions</string>
  <string name="applicable">Applicable</string>
  <string name="details">Details</string>
  <string name="attempted_questions">Attempted Questions</string>
  <string name="total_questions">Total Questions</string>
  <string name="settings">Settings</string>
  <string name="checkform_id">Checkform ID</string>
  <string name="entry_type">Entry Type</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="begin_data_collection">Begin Data Collection</string>
  <string name="corrections_settings">Corrections settings</string>
  <string name="last_task">Last Task</string>
  <string name="export">Export</string>
</resources>