<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_home"
      android:title="@string/home" />
    <item
      android:id="@+id/nav_delay"
      android:icon="@drawable/ic_wait1"
      android:title="@string/delay"
      android:visible="false" />
    <item
      android:id="@+id/nav_stop_machine"
      android:icon="@drawable/ic_stop_machine"
      android:title="@string/stop_machine"
      android:visible="false" />
    <item
      android:id="@+id/nav_machine_breakdown"
      android:icon="@drawable/ic_action_report"
      android:title="@string/machine_breakdown"
      android:visible="false" />
    <item
      android:id="@+id/nav_day_works"
      android:icon="@drawable/ic_action_departure_board"
      android:title="@string/day_works"
      android:visible="false" />
    <item
      android:id="@+id/nav_last_task"
      android:icon="@drawable/ic_last_task"
      android:title="@string/last_task" />
    <item
      android:id="@+id/nav_ntrip_client"
      android:icon="@drawable/ic_ntrip_client"
      android:title="@string/corrections_settings" />
    <item
      android:id="@+id/nav_night_mode"
      android:icon="@drawable/ic_dark_mode"
      android:title="@string/night_mode" />
    <item
      android:id="@+id/nav_load_history"
      android:icon="@drawable/ic_history"
      android:title="@string/work_history"
      android:visible="false" />
    <item
      android:id="@+id/nav_change_machine"
      android:icon="@drawable/ic_change_machine"
      android:title="@string/change_machine"
      android:visible="false" />
    <item
      android:id="@+id/nav_hours_reporting"
      android:icon="@drawable/ic_hours_reporting"
      android:title="@string/hours_reporting"
      android:visible="false" />
    <item
      android:id="@+id/nav_checkforms"
      android:icon="@drawable/ic_checkform"
      android:title="@string/checkform"
      android:visible="false" />
    <item
      android:id="@+id/nav_server_sync"
      android:icon="@drawable/ic_server_sync"
      android:title="@string/server_sync" />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings"
      android:title="@string/settings"
      android:visible="true" />
    <item
      android:id="@+id/nav_export"
      android:icon="@drawable/ic_export_data"
      android:title="@string/export"
      android:visible="false" />
    <item
      android:id="@+id/nav_logout"
      android:icon="@drawable/ic_logout"
      android:title="@string/logout" />

  </group>

  <item android:title="@string/privacy_policy">
    <menu>
      <item
        android:id="@+id/nav_privacy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy" />
    </menu>
  </item>

  <item android:title="@string/communicate">
    <menu>
      <item
        android:id="@+id/nav_email"
        android:icon="@drawable/ic_email"
        android:title="@string/report_error" />
    </menu>
  </item>


</menu>
