<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eth_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp">

    <androidx.cardview.widget.CardView
        style="?attr/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        card_view:cardCornerRadius="@dimen/_8sdp"
        card_view:cardElevation="@dimen/_8sdp"
        card_view:cardMaxElevation="@dimen/_10sdp"
        card_view:contentPadding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/id" />
                <TextView
                    android:id="@+id/cf_id"
                    style="@style/load_history_desc" android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/checkform_id" />
                <TextView
                    android:id="@+id/cf_checkform_id"
                    style="@style/load_history_desc" android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/entry_type" />
                <TextView
                    android:id="@+id/cf_entry_type"
                    style="@style/load_history_desc" android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/checkform" />
                <TextView
                    android:id="@+id/cf_name"
                    style="@style/load_history_desc" android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/applicable" />
                <TextView
                    android:id="@+id/cf_applicable"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/schedule" />
                <TextView
                    android:id="@+id/cf_schedule"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/total_questions" />
                <TextView
                    android:id="@+id/cf_questions"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    android:id="@+id/cf_done_questions_text"
                    style="@style/cf_text"
                    android:text="@string/attempted_questions" />
                <TextView
                    android:id="@+id/cf_done_questions"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/operator" />
                <TextView
                    android:id="@+id/cfc_operator"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/details" />
                <TextView
                    android:id="@+id/cfc_details"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/start_time" />
                <TextView
                    android:id="@+id/cfc_start_time"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/end_time" />
                <TextView
                    android:id="@+id/cfc_end_time"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/duration" />
                <TextView
                    android:id="@+id/cfc_duration"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cfc_gps_loading_layout"
                style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/start_gps" />
                <TextView
                    android:id="@+id/cfc_gps_loading"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cfc_gps_unloading_layout"
                style="@style/load_history_row_item">
                <TextView
                    style="@style/cf_text"
                    android:text="@string/stop_gps" />
                <TextView
                    android:id="@+id/cfc_gps_unloading"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_record_number_text" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/lhr_time_layout"
                style="@style/load_history_row_item">

                <TextView
                    style="@style/cf_text"
                    android:text="@string/mode" />

                <TextView
                    android:id="@+id/cfc_mode"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_mode_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cfc_sync_layout"
                style="@style/load_history_row_item">

                <TextView
                    style="@style/cf_text"
                    android:text="@string/server_sync" />

                <TextView
                    android:id="@+id/cfc_sync"
                    style="@style/load_history_desc"
                    android:text="@string/list_row_delay_history_eth_mode_text" />
            </LinearLayout>

            <Button
                android:id="@+id/cf_details"
                android:text="@string/details"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:padding="@dimen/_1sdp"
                android:textSize="@dimen/_8sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/white"
                android:background="@drawable/view_details_button"
                android:layout_height="@dimen/_20sdp"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>
