<?xml version="1.0" encoding="utf-8" standalone="no"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginStart="@dimen/_10sdp"
  android:layout_marginEnd="@dimen/_10sdp"
  tools:context="app.mvp.activities.MvpStartDataCollectionActivity">

  <LinearLayout
    android:id="@+id/mvp_load_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="@dimen/_10sdp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
      android:id="@+id/mvp_load_title"
      style="@style/activity_title"
      android:text="@string/activity_rload_rload_title_text"
      android:visibility="visible" />

    <TextView
      android:id="@+id/mvp_load_project"
      style="@style/load_tv"
      android:text="@string/activity_rload_trload_material_text" />

    <TextView
      android:id="@+id/mvp_load_folder"
      style="@style/load_tv"
      android:text="@string/activity_rload_trload_location_text" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/mvp_load_top"
    android:layout_centerInParent="true"
    android:layout_marginTop="@dimen/_80sdp"
    android:orientation="vertical">

    <Button
      android:id="@+id/mvp_load_load"
      style="@style/next_button"
      android:layout_width="match_parent"
      android:text="@string/begin_data_collection" />

  </LinearLayout>

  <Button
    android:id="@+id/mvp_load_home"
    style="@style/next_button_single"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="@color/colorPrimary"
    android:text="@string/home" />

</RelativeLayout>
